# eternal-math

./: .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  test-and-build.yml
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: benchmarks.rst  cli.rst  core.rst  number_theory.rst  proofs.rst  symbolic.rst  visualization.rst
docs/source/user_guide/: benchmarking.rst  cli.rst  core_concepts.rst  number_theory.rst  proof_system.rst  symbolic_math.rst  visualization.rst
eternal_math/: __init__.py  benchmarks.py  cli.py  core.py  linear_algebra.py  number_theory.py  proofs.py  symbolic.py  visualization.py
examples/: benchmarking_demo.py  cli_session_demo.py  constants_demo.py  linear_algebra_demo.py  number_theory_exploration.py  proof_system_demo.py  symbolic_math_demo.py  visualization_demo.py
tests/: test_benchmarks.py  test_cli.py  test_cli_integration.py  test_constants.py  test_core.py  test_core_error_handling.py  test_linear_algebra.py  test_number_theory.py  test_proofs.py  test_symbolic.py  test_visualization.py
