[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eternal-math"
version = "0.1.0"
description = "An open-source software platform for exploring, proving, and generating mathematical concepts"
readme = "README.md"
license = "MIT"
keywords = ["mathematics", "number-theory", "symbolic-math", "visualization", "proofs"]
authors = [
    { name = "Dmitrii Murygin", email = "dmitrij.murygin7@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "sympy>=1.9",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "flake8-toml-config",
    "mypy>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[project.urls]
"Homepage" = "https://github.com/Vooblin/eternal-math"
"Bug Reports" = "https://github.com/Vooblin/eternal-math/issues"
"Source" = "https://github.com/Vooblin/eternal-math"

[project.scripts]
eternal-math = "eternal_math.cli:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "F404", "F405"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*", "sympy.*"]
ignore_missing_imports = true
